// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render as disabled 1`] = `
<TouchableOpacity
  activeOpacity={0.5}
  disabled={true}
  style={
    Array [
      Object {
        "borderRadius": 8,
        "height": 50,
        "paddingHorizontal": 15,
      },
      Object {
        "backgroundColor": "#007aff",
        "justifyContent": "center",
        "overflow": "hidden",
      },
      undefined,
      Object {
        "backgroundColor": "#e5e5ea",
      },
    ]
  }
>
  <View
    pointerEvents="none"
    style={
      Object {
        "alignItems": "center",
        "bottom": 0,
        "justifyContent": "center",
        "left": 0,
        "opacity": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
        "transform": null,
      }
    }
  >
    <ActivityIndicator
      animating={true}
      color="#ffffff"
      hidesWhenStopped={true}
      size="small"
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "center",
        "opacity": 1,
        "transform": null,
      }
    }
  >
    <Image
      source={
        Object {
          "uri": "image.png",
        }
      }
      style={
        Array [
          Object {
            "height": 20,
            "width": 20,
          },
          Object {
            "flexShrink": 0,
            "tintColor": "#ffffff",
          },
          undefined,
          Object {
            "tintColor": "#aeaeb2",
          },
        ]
      }
    />
    <Text
      numberOfLines={1}
      style={
        Array [
          Object {
            "fontSize": 17,
            "marginHorizontal": 5,
          },
          Object {
            "backgroundColor": "transparent",
            "color": "#ffffff",
            "fontFamily": "System",
            "fontWeight": "600",
            "includeFontPadding": false,
            "textAlignVertical": "center",
          },
          undefined,
          Object {
            "color": "#aeaeb2",
          },
        ]
      }
    >
      Button
    </Text>
  </View>
</TouchableOpacity>
`;

exports[`should render image at the left 1`] = `
<TouchableOpacity
  activeOpacity={0.5}
  style={
    Array [
      Object {
        "borderRadius": 8,
        "height": 50,
        "paddingHorizontal": 15,
      },
      Object {
        "backgroundColor": "#007aff",
        "justifyContent": "center",
        "overflow": "hidden",
      },
      undefined,
    ]
  }
>
  <View
    pointerEvents="none"
    style={
      Object {
        "alignItems": "center",
        "bottom": 0,
        "justifyContent": "center",
        "left": 0,
        "opacity": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
        "transform": null,
      }
    }
  >
    <ActivityIndicator
      animating={true}
      color="#ffffff"
      hidesWhenStopped={true}
      size="small"
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "center",
        "opacity": 1,
        "transform": null,
      }
    }
  >
    <Image
      source={
        Object {
          "uri": "left.png",
        }
      }
      style={
        Array [
          Object {
            "height": 20,
            "width": 20,
          },
          Object {
            "flexShrink": 0,
            "tintColor": "#ffffff",
          },
          undefined,
        ]
      }
    />
    <Text
      numberOfLines={1}
      style={
        Array [
          Object {
            "fontSize": 17,
            "marginHorizontal": 5,
          },
          Object {
            "backgroundColor": "transparent",
            "color": "#ffffff",
            "fontFamily": "System",
            "fontWeight": "600",
            "includeFontPadding": false,
            "textAlignVertical": "center",
          },
          undefined,
        ]
      }
    >
      Right Text
    </Text>
  </View>
</TouchableOpacity>
`;

exports[`should render image at the right 1`] = `
<TouchableOpacity
  activeOpacity={0.5}
  style={
    Array [
      Object {
        "borderRadius": 8,
        "height": 50,
        "paddingHorizontal": 15,
      },
      Object {
        "backgroundColor": "#007aff",
        "justifyContent": "center",
        "overflow": "hidden",
      },
      undefined,
    ]
  }
>
  <View
    pointerEvents="none"
    style={
      Object {
        "alignItems": "center",
        "bottom": 0,
        "justifyContent": "center",
        "left": 0,
        "opacity": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
        "transform": null,
      }
    }
  >
    <ActivityIndicator
      animating={true}
      color="#ffffff"
      hidesWhenStopped={true}
      size="small"
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "center",
        "opacity": 1,
        "transform": null,
      }
    }
  >
    <Text
      numberOfLines={1}
      style={
        Array [
          Object {
            "fontSize": 17,
            "marginHorizontal": 5,
          },
          Object {
            "backgroundColor": "transparent",
            "color": "#ffffff",
            "fontFamily": "System",
            "fontWeight": "600",
            "includeFontPadding": false,
            "textAlignVertical": "center",
          },
          undefined,
        ]
      }
    >
      Left Text
    </Text>
    <Image
      source={
        Object {
          "uri": "right.png",
        }
      }
      style={
        Array [
          Object {
            "height": 20,
            "width": 20,
          },
          Object {
            "flexShrink": 0,
            "tintColor": "#ffffff",
          },
          undefined,
        ]
      }
    />
  </View>
</TouchableOpacity>
`;

exports[`should render image only 1`] = `
<TouchableOpacity
  activeOpacity={0.5}
  style={
    Array [
      Object {
        "borderRadius": 8,
        "height": 50,
        "paddingHorizontal": 15,
      },
      Object {
        "backgroundColor": "#007aff",
        "justifyContent": "center",
        "overflow": "hidden",
      },
      undefined,
    ]
  }
>
  <View
    pointerEvents="none"
    style={
      Object {
        "alignItems": "center",
        "bottom": 0,
        "justifyContent": "center",
        "left": 0,
        "opacity": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
        "transform": null,
      }
    }
  >
    <ActivityIndicator
      animating={true}
      color="#ffffff"
      hidesWhenStopped={true}
      size="small"
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "center",
        "opacity": 1,
        "transform": null,
      }
    }
  >
    <Image
      source={
        Object {
          "uri": "image.png",
        }
      }
      style={
        Array [
          Object {
            "height": 20,
            "width": 20,
          },
          Object {
            "flexShrink": 0,
            "tintColor": "#ffffff",
          },
          undefined,
        ]
      }
    />
  </View>
</TouchableOpacity>
`;

exports[`should render text only 1`] = `
<TouchableOpacity
  activeOpacity={0.5}
  style={
    Array [
      Object {
        "borderRadius": 8,
        "height": 50,
        "paddingHorizontal": 15,
      },
      Object {
        "backgroundColor": "#007aff",
        "justifyContent": "center",
        "overflow": "hidden",
      },
      undefined,
    ]
  }
>
  <View
    pointerEvents="none"
    style={
      Object {
        "alignItems": "center",
        "bottom": 0,
        "justifyContent": "center",
        "left": 0,
        "opacity": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
        "transform": null,
      }
    }
  >
    <ActivityIndicator
      animating={true}
      color="#ffffff"
      hidesWhenStopped={true}
      size="small"
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "center",
        "opacity": 1,
        "transform": null,
      }
    }
  >
    <Text
      numberOfLines={1}
      style={
        Array [
          Object {
            "fontSize": 17,
            "marginHorizontal": 5,
          },
          Object {
            "backgroundColor": "transparent",
            "color": "#ffffff",
            "fontFamily": "System",
            "fontWeight": "600",
            "includeFontPadding": false,
            "textAlignVertical": "center",
          },
          undefined,
        ]
      }
    >
      Button
    </Text>
  </View>
</TouchableOpacity>
`;

exports[`should render with custom content 1`] = `
<TouchableOpacity
  activeOpacity={0.5}
  style={
    Array [
      Object {
        "borderRadius": 8,
        "height": 50,
        "paddingHorizontal": 15,
      },
      Object {
        "backgroundColor": "#007aff",
        "justifyContent": "center",
        "overflow": "hidden",
      },
      undefined,
    ]
  }
>
  <View
    pointerEvents="none"
    style={
      Object {
        "alignItems": "center",
        "bottom": 0,
        "justifyContent": "center",
        "left": 0,
        "opacity": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
        "transform": null,
      }
    }
  >
    <ActivityIndicator
      animating={true}
      color="#ffffff"
      hidesWhenStopped={true}
      size="small"
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "center",
        "opacity": 1,
        "transform": null,
      }
    }
  >
    <Text>
      CUSTOM CONTENT
    </Text>
  </View>
</TouchableOpacity>
`;

exports[`should render with custom styles 1`] = `
<TouchableOpacity
  activeOpacity={0.5}
  style={
    Array [
      Object {
        "borderRadius": 8,
        "height": 50,
        "paddingHorizontal": 15,
      },
      Object {
        "backgroundColor": "#007aff",
        "justifyContent": "center",
        "overflow": "hidden",
      },
      Object {
        "backgroundColor": "red",
      },
    ]
  }
>
  <View
    pointerEvents="none"
    style={
      Object {
        "alignItems": "center",
        "bottom": 0,
        "justifyContent": "center",
        "left": 0,
        "opacity": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
        "transform": null,
      }
    }
  >
    <ActivityIndicator
      animating={true}
      color="#ffffff"
      hidesWhenStopped={true}
      size="small"
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "center",
        "opacity": 1,
        "transform": null,
      }
    }
  >
    <Image
      source={
        Object {
          "uri": "image.png",
        }
      }
      style={
        Array [
          Object {
            "height": 20,
            "width": 20,
          },
          Object {
            "flexShrink": 0,
            "tintColor": "#ffffff",
          },
          Object {
            "tintColor": "blue",
          },
        ]
      }
    />
    <Text
      numberOfLines={1}
      style={
        Array [
          Object {
            "fontSize": 17,
            "marginHorizontal": 5,
          },
          Object {
            "backgroundColor": "transparent",
            "color": "#ffffff",
            "fontFamily": "System",
            "fontWeight": "600",
            "includeFontPadding": false,
            "textAlignVertical": "center",
          },
          Object {
            "color": "green",
          },
        ]
      }
    >
      Button
    </Text>
  </View>
</TouchableOpacity>
`;
